--- a/_pages/amp/index.amp.html
+++ b/_pages/amp/index.amp.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <script async src="https://cdn.ampproject.org/v0.js"></script>
-    <title>Homepage - Lux Health</title>
+    <title>Lux Health | World-class in-person health care made easy</title>
     <link rel="canonical" href="https://www.myluxhealth.com">
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
     <script type="application/ld+json">
@@ -33,11 +33,12 @@
       <video class="lazy" autoplay muted loop playsinline style="height: 100%;" layout="fill" poster="">
           <source type="video/mp4" data-src="{{ base_url }}/assets/vid/lux-health-best-in-person-home-physical-exam.mp4?alt=media&v=1" />
       </video>
-  </div>
-  
-  <div style="display: block; text-align: center;">
-      <h1  style="color: #fff; font-size: 24px; font-weight: 100;">Welcome to Lux Health</h1>
-  </div>
+    </div>
+    
+    <div style="display: block; text-align: center;">
+        <h1  style="color: #fff; font-size: 24px; font-weight: 100;">Welcome to Lux Health</h1>
+    </div>
+
 
   </body>
 </html>
