--- a/_pages/amp/index.amp.html
+++ b/_pages/amp/index.amp.html
@@ -30,9 +30,9 @@
     </amp-video>
 
     <div style="display: block; width: 100%; height: 80vh; max-width: 1600px; margin: 0 auto; text-align: center; vertical-align: top;overflow: hidden;">
-      <video class="lazy" autoplay muted loop playsinline style="height: 100%;" layout="fill" poster="">
+      <amp-video class="lazy" autoplay muted loop playsinline style="height: 100%;" layout="fill" poster="">
           <source type="video/mp4" data-src="{{ base_url }}/assets/vid/lux-health-best-in-person-home-physical-exam.mp4?alt=media&v=1" />
-      </video>
+      </amp-video>
     </div>
     
     <div style="display: block; text-align: center;">
